--- a/src/styles/views/blog/_blog.css
+++ b/src/styles/views/blog/_blog.css
@@ -93,7 +93,7 @@
       hsla(197, 22%, 10%, 0) 35%,
       var(--sub-panel-c) 95%
   );
-  z-index    : 5;
+  z-index    : 1;
   transition : opacity .3s ease;
 }
 .blog-entry__snippet::after {
